# Telnet-XHC-HB04-Pendant

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GrblState.cpp  GrblState.h  GrblStatus.cpp  GrblStatus.h  SerialDebug.h  Telnet Pendant.cpp  Telnet Pendant.h  Telnet.cpp  Telnet.h  XHC_HB04.cpp  xPro5Telnet.cpp
.github/workflows/: Build.yml  c-cpp.yml  cmake-single-platform.yml
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  XHC_HB04.cpp  XHC_HB04.h
GrblParser/: GrblCode.cpp  GrblCode.h
GrblParserSrc/: GrblCode.cpp  GrblParserC.c
